2011-07-23    <warmerdam@pobox.com>

	* configure.in, Makefile.am, proj.pc.in: Added pkg-config support (#3)

2011-07-05  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_init.c, src/pj_gridinfo.c: Correct error handling for missing
	grid shift files and defaults files (#116)

2011-06-09  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_robin.c: fix mistaken constant value (#113).

	* src/pj_init.c: fix for +axis validation (#87)

	* nad/IGNF: addition/fix of Kerguelen, Amsterdam and St Paul, Terre Adélie,
	INSPIRE CRSes in IGNF catalogue (#88)

2011-05-31  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_igh.c: use project free instead of free() in FREEUP (#112).

	* src/projects.h: memset PJ structure to zeros after allocation to
	avoid problems getting everything initialized properly (#112).

2011-05-23  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/esri.extra, nad/other.extra: moved 900913 definition from 
	esri.extra to other.extra since it has nothing to do with esri. 

	* nad/epsg: updated to EPSG 7.6.

2011-05-20  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_sterea.c: ensure P->en is properly initialized (#109)

2011-05-10  Frank Warmerdam  <warmerdam@pobox.com>

	* src/projects.h, src/pj_init.c, src/pj_transform.c: Implement
	support for vto_meter and vunits vertical units transformation.

2011-05-04  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_igh.c: Added goodes interrupted homolosine (#106).

2011-03-28  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_gridlist.c: avoid possible buffer overflow.
	https://bugs.meego.com/show_bug.cgi?id=14963

2011-03-23  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_initcache.c: Fix reversed memcpy that causes a crash on the
	16th item put in the initcache. (#100).

2011-02-21  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_init.c: fix serious bug in locale handling, wasn't copying
	the old locale so it would sometimes get corrupted.
